Edit the pom file and yaml to trying run action cicd after every pushing